<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.1"
       app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40sp"
        android:textSize="35dp"
        android:gravity="center"
        android:text="@string/logo"
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText

        android:layout_marginTop="20sp"
        app:layout_constraintBottom_toTopOf="@id/edtEmail"
        android:textSize="20sp"
        android:hint="@string/FullName"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/edtHoTen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:hint="Nhập Email"
        app:layout_constraintTop_toBottomOf="@id/edtHoTen"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:hint="@string/PassWord"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/edtPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:hint="@string/RePass"
        app:layout_constraintTop_toBottomOf="@id/edtPassWord"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/edtRePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button

        android:background="@drawable/botron"
        app:backgroundTint="@null"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@id/edtRePass"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/DangKy"
        android:id="@+id/btnDangKy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>





</androidx.constraintlayout.widget.ConstraintLayout>